<?xml version="1.0"?>
<package format="2">
	<name>pb2025_robot_description</name>
	<version>1.0.0</version>
	<description>pb2025_robot_description</description>

	<maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>nav2_common</exec_depend>
	<exec_depend>sdformat_tools</exec_depend>

	<!-- rmoss_gz_resources: 仅 Gazebo 仿真用(网格资源),实车建图/导航不需要;
	     需要跑仿真时再单独装(见 src/description/pb2025_robot_description/dependencies.repos) -->
	<!-- <depend>rmoss_gz_resources</depend> -->

	<test_depend>ament_cmake_gtest</test_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
